--- a/application/templates/main/tag_table.html
+++ b/application/templates/main/tag_table.html
@@ -2,7 +2,7 @@
 
 {% block table %}
     <h2>Clasificación</h2>
-    <h5>Selecciones banco y período para clasificar</h5>
+    <h5 style="margin-bottom: 20px;">Selecciones banco y período para clasificar</h5>
     {% if banks %}
     <div class="col-8">
         <form action="" method="post">
