--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -11,7 +11,7 @@
             {% endblock %}
             <title>
                 {% block title %}
-                    Flask simple app
+                    Finanzas Personales
                 {% endblock %}
             </title>
         {% endblock %}
@@ -20,7 +20,7 @@
         <div>
             {% block navbar %}
                 <nav class="navbar navbar-expand-md navbar-light" style="background-color: #e3f2fd;">
-                    <a href="/" class="navbar-brand">Finanzas Personales</a>
+                    <a href="/" class="navbar-brand">FP</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar6">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -30,14 +30,25 @@
                                 <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                             </li>
                             {% if current_user.is_active %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main.upload') }}">Subir</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  Cuenta
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="{{ url_for('main.upload') }}">Cargar</a>
+                                    <a class="dropdown-item" href="{{ url_for('main.flow') }}">Movimientos</a>
+                                    <a class="dropdown-item" href="{{ url_for('main.tag') }}">Tag</a>
+                                </div>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main.flow') }}">Movimientos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main.tag') }}">Tag</a>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                  Tarjeta
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                  <a class="dropdown-item" href="#">Cargar</a>
+                                  <a class="dropdown-item" href="#">Gastos</a>
+                                  <a class="dropdown-item" href="#">Tag</a>
+                                </div>
                             </li>
                             {% endif %}
                         </ul>
