--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="col-md-8">
-        <h2>Bienvenido {{ current_user.username }}!</h2>
+        <h2>Bienvenido {{ current_user.username }} a Finanzas Personales!</h2>
         <p>Aquí podrás visualizar y controlar tus gastos de un modo más eficiente y productivo.</p>
     </div>
     <div class="col-md-4">
@@ -15,13 +15,13 @@
                 <ul class="list-group">
                     {% for bank in banks %}
                     <li class="list-group-item list-group-item-light">
-                        <p style="display: inline;"><b>{{ bank.bank }}</b></p>
+                        <p style="display: block;"><b>{{ bank.bank }}</b></p>
+                        <p style="display: inline;">{{ bank.account_n }}</p>
                         {% if last[bank.bank] > 0 %}
                         <p style="display: inline; float: right; color: green;">ARS {{ last[bank.bank] }}</p>
                         {% else %}
                         <p style="display: inline; float: right; color: red;">ARS {{ last[bank.bank] }}</p>
                         {% endif %}
-                        <p>{{ bank.account_n }}</p>
                         </p>
                     </li>
                     {% endfor %}
