--- a/application/templates/main/flow.html
+++ b/application/templates/main/flow.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Movimientos</h2>
-    <h5>Selecciones banco y período</h5>
+    <h5 style="margin-bottom: 20px;">Selecciones banco y período</h5>
     {% if banks %}
     <div class="col-8">
         <form action="" method="post">
