--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -35,9 +35,9 @@
                                   Cuenta
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="{{ url_for('main.upload') }}">Cargar</a>
+                                    <a class="dropdown-item" href="{{ url_for('main.upload_movs') }}">Cargar</a>
                                     <a class="dropdown-item" href="{{ url_for('main.flow') }}">Movimientos</a>
-                                    <a class="dropdown-item" href="{{ url_for('main.tag') }}">Tag</a>
+                                    <a class="dropdown-item" href="{{ url_for('main.tag', type='flow') }}">Tag</a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown">
@@ -45,9 +45,9 @@
                                   Tarjeta
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                  <a class="dropdown-item" href="#">Cargar</a>
-                                  <a class="dropdown-item" href="#">Gastos</a>
-                                  <a class="dropdown-item" href="#">Tag</a>
+                                  <a class="dropdown-item" href="{{ url_for('main.upload_credit') }}">Cargar</a>
+                                  <a class="dropdown-item" href="{{ url_for('main.payments') }}">Gastos</a>
+                                  <a class="dropdown-item" href="{{ url_for('main.tag', type='credit') }}">Tag</a>
                                 </div>
                             </li>
                             {% endif %}
