--- a/application/templates/main/tag_table_credit.html
+++ b/application/templates/main/tag_table_credit.html
@@ -1,8 +1,8 @@
-{% extends "base.html" %} 
+{% extends "main/tag.html" %} 
 
-{% block content %}
-    <h2>Movimientos</h2>
-    <h5 style="margin-bottom: 20px;">Selecciones banco y período</h5>
+{% block table %}
+    <h2>Clasificación de Gastos</h2>
+    <h5 style="margin-bottom: 20px;">Seleccione el banco de las tarjetas de crédito y período para clasificar</h5>
     {% if banks %}
     <div class="col-8">
         <form action="" method="post">
@@ -45,20 +45,6 @@
             <span class="btn mb-4">{{ end_date }}</span>
             {% endif %}
         </form>
-        <form action="" method="post">
-            <select class="custom-select col-3 mb-4" name="type" required>
-                <option disabled selected value="">Tipo</option>
-                {% if tag_list %}
-                    {% for tag in tag_list %}
-                        <option value="{{ tag.tag }}">{{ tag.tag }}</option>
-                    {% endfor %}
-                {% endif %}
-            </select>
-            <button class="btn btn-outline-secondary mb-4" type="submit" value="Select">Seleccionar</button>
-            {% if selected_tag %}
-            <span class="btn mb-4">{{ selected_tag }}</span>
-            {% endif %}
-        </form>
     </div>
     {% else %}
     <p>No hay datos cargados</p>
@@ -68,36 +54,54 @@
         <thead>
             <tr>
                 <th style="text-align: center;">Fecha</th>
-                <th style="text-align: center;">Concepto</th>
-                <th>Importe</th>
-                <th>Saldo</th>
+                <th style="text-align: center;">Acreedor</th>
+                <th>Cuota</th>
+                <th>Importe en ARS</th>
+                <th style="text-align: center;">Importe en ARS</th>
                 <th style="text-align: center;">Tag</th>
             </tr>
         </thead>
         <tbody>
-        {% for row in data.items %}
-            <tr>
-                <td>{{ row.timestamp.date() }}</td>
-                <td>{{ row.detail }}</td>
-                <td>{{ row.flow }}</td>
-                <td>{{ row.bal }}</td>
-                <td style="text-align: center;">{{ row.tag }}</td>
-            </tr>
-        {% endfor %}
+            <form action="" method="POST" id="tagform" novalidate>
+            {% for row in data.items %}
+            {{ form.hidden_tag() }}
+                <tr>
+                    <td>{{ row.timestamp.date() }}</td>
+                    <td>{{ row.creditor }}</td>
+                    {% if row.share  %}
+                    <td>{{ row.share }}</td>
+                    {% else %}
+                    <td>Única</td>
+                    {% endif %}
+                    <td>{{ row.ars }}</td>
+                    <td style="text-align: center;">{{ row.usd }}</td>
+                    <td>{{ form.tags[loop.index0].tag(value=value[loop.index0]) }}</td>
+                </tr>
+            {% endfor %}
+            </form>
         </tbody>
     </table>
+    <div style="display: inline-block; align-items: center;">
     {% for page_num in data.iter_pages(left_edge = 1, right_edge=1, left_current=1, right_current=2 ) %}
     {% if page_num %}
         {% if page_num == data.page %}
-        <a class="btn btn-info mb-4" href="{{ url_for('main.flow', page=page_num )}}">{{ page_num }}</a>
+        <a class="btn btn-info mb-4" href="{{ url_for('main.tag_credit', page=page_num, type='credit' )}}">{{ page_num }}</a>
         {% else %}
-        <a class="btn btn-outline-info mb-4" href="{{ url_for('main.flow', page=page_num )}}">{{ page_num }}</a>
+        <a class="btn btn-outline-info mb-4" href="{{ url_for('main.tag_credit', page=page_num, type='credit' )}}">{{ page_num }}</a>
         {% endif %}    
     {% else %}
     ...
     {% endif %}
     {% endfor %}
 
+    {% if submit == 1 %}
+        <button class="btn btn-info mb-4" type="submit" value="Tag" form="tagform" name='tag_1'>Actualizar</button>
+    {% elif submit == 2 %}
+        <button class="btn btn-info mb-4" type="submit" value="Tag" form="tagform" name='tag_2'>Actualizar</button>
+    {% elif submit == 3 %}
+        <button class="btn btn-info mb-4" type="submit" value="Tag" form="tagform" name='tag_3'>Actualizar</button>
+    {% endif %}
+    </div>
 
     {% endif %}
 
