--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -48,6 +48,7 @@
                                   <a class="dropdown-item" href="{{ url_for('main.upload_credit') }}">Cargar</a>
                                   <a class="dropdown-item" href="{{ url_for('main.payments') }}">Gastos</a>
                                   <a class="dropdown-item" href="{{ url_for('main.card_amount') }}">Gastos por Tarjeta</a>
+                                  <a class="dropdown-item" href="{{ url_for('main.due_dates') }}">Vencimientos</a>
                                   <a class="dropdown-item" href="{{ url_for('main.tag', type='credit') }}">Tag</a>
                                 </div>
                             </li>
