--- a/application/templates/main/card_amount.html
+++ b/application/templates/main/card_amount.html
@@ -15,14 +15,18 @@
         {{ sel_card}}
         {% endif %}
     </form>
+    {% else %}
+    <p>No hay tarjetas cargadas</p>
     {% endif %}
 
-    {% if data %}
+    {% if data.items %}
     <table class="table table-sm" style='margin-top: 20px;'>
         <thead>
             <tr>
                 <!-- <th style="text-align: center;">Elegir</th> -->
+                {% if cards %}
                 <th><input type="checkbox" onclick="selects()" id="check_all" name="check_all" value="all"></th>
+                {% endif %}
                 <th style="text-align: center;">Banco</th>
                 <th style="text-align: center;">Tarjeta</th>
                 <th style="text-align: center;">Nro. de Tarjeta</th>
@@ -39,10 +43,12 @@
             <tbody>
             {% for row in data.items %}
                 <tr>
+                    {% if cards %}
                     <td><input type="checkbox" id="item_{{ loop.index }}" name="chk" value="{{ row.id }}"></td>
+                    {% endif %}
                     <td>{{ row.bank }}</td>
                     {% if vendors %}
-                    <td>{{ vendors[loop.index] }}</td>
+                    <td>{{ vendors[loop.index0] }}</td>
                     {% else %}
                     <td>-</td>
                     {% endif %}
@@ -67,6 +73,7 @@
             </tbody>
         </form>
     </table>
+
     {% for page_num in data.iter_pages(left_edge = 1, right_edge=1, left_current=1, right_current=2 ) %}
     {% if page_num %}
         {% if page_num == data.page %}
@@ -80,8 +87,11 @@
     {% endfor %}
 
     <button type="submit" value="items" form="select_items" name='items_selected'>Aplicar</button>
-
+    {% else %}
+    <p>No hay consumos de tarjeta cargados</p>
+    
     {% endif %}
+
 
     <script type="text/javascript">
         function selects() {
